2009/03/? Version 3.01-stable-6
- Fixed bug in PDF printing
- Default reminder and background color for appointments and tasks
- When a new OpenOffice document is created from a template in the addressbook it is
  saved at the contact and the GOTA is launched.
- Calendar scale with 15 minute interval
- Compose multiple e-mails at once
- Autosave mail

2009/03/03 Version 3.01-stable-5
- Updated Czech translation
- New PDF print in calendar module
- Search trough all custom fields in addressbook module
- Various bug fixes.

2009/02/18 Version 3.01-stable-4
- Fixed problem with IMAP connections. Some people were having trouble connecting to 
  an IMAP server. GO would get in an endless loop because these servers returned the
  INBOX folder as a child of itself.

2009/02/16 Version 3.01-stable-2
- Use GO as complete mailserver solution for multiple domains and with vacation support
  see: http://www.group-office.com/wiki/Mailserver for instructions
  
- Save e-mail as file, task, appointment and note (pro version)
- Improved inviting participants. It now sends a mail automatically.

2009/02/06 Version 3.00-stable-18
- Problem in billing module that asked for book selection each time
- Autofill values when you create an invoice from a contact or company

2009/02/05 Version 3.00-stable-17
- Check for global config file caused error with open_basedir set
- Better error reporting dialog.
- Upgraded to ExtJS 2.2.1
- Fixed minor bugs


2009/02/04 Version 3.00-stable-16
- Added extra customer information field at invoices
- Links didn't work in IE
- Added Danish translation
- Added Finnish - Suomi translation
- Support for quota on the entire installation
- Fixed some minor bugs

2009/01/30 Version 3.00-stable-15
- A lot of bugs in the projects module were fixed
- Better navigation in calendar views
- Fixed bug in event invitations
- Events in participants calendars get updated when you change the master event.
- Added Polish translation